--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,10 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #e90808;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+}
   
+.espacioGrande {
+  height: 100vh;
+}
