Diseño de la navbar con logo y opciones completo falta poner las opciones desplegables

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,14 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
+
 }
+
+html, body {
+  background-color: rgba(252, 252, 252, 0.9);
+}
+
+
   
 .espacioGrande {
   height: 100vh;
