--- a/src/styles/navBar.css
+++ b/src/styles/navBar.css
@@ -1,40 +1,44 @@
+/* DISEÑO DE UNA NAVBAR STICKY CON UN LOGO A LA IZQUIERDA Y UN MENÚ DESPLEGABLE A LA DERECHA */
+/* ESTILOS GENERALES DE LA NAVBAR */
+
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgba(22, 27, 29, 0.9);
-  padding: 7px 15px;
+  background: linear-gradient(to right, #f2ff00, #077c1a);
+  padding: 0px 50px;
   max-width: 100%;
-  margin: 0 20px;
-  border-radius: 10px;
-  top: 20px;
+  height: 11vh; 
+  overflow: hidden;
 }
 
 .contenedor-navbar {
   position: sticky;
-  top: 20px;
+  top: 0;
   width: 100%;
   z-index: 1000;
   height: 100%;
   margin-bottom: 20px;
 }
 
-.navbar-logo-center {
-  flex-grow: 1;
+
+.navbar-logo {
   display: flex;
-  justify-content: center; /* Centra el logo */
+  align-items: center;
+  gap: 10px;
 }
 
-.navbar-logo-center img {
-  height: 50px; /* Ajusta el tamaño según tu logo */
+.navbar-logo img {
+  max-height: 136px;
+  height: auto;
   width: auto;
+  object-fit: contain;
 }
 
 
 .navbar-logo a {
   color: rgb(255, 255, 255);
-  font-size: 1.179rem;
-  font-weight: 700;
+  font-weight: 400;
   font-family: "Poppins", Helvetica, Arial, sans-serif;
   text-align: center;
   text-decoration: none;
@@ -44,7 +48,7 @@
 .navbar-links{
   list-style: none;
   display: flex;
-  gap: 10px;
+  gap: 40px;
 }
 
 .navbar-links li {
@@ -52,16 +56,16 @@
 }
 
 .navbar-links li a:hover {
-  background-color: rgba(255, 255, 255, 0.2);
-  border-radius: 5px;
+  color: #000000; 
 }
 
-
+/* ESTILOS DEL MENÚ DESPLEGABLE Y DE LAS OPCIONES DEL MENÚ*/ 
 
 .navbar-links a, .dropbtn {
   color: rgb(255, 255, 255);
-  font-size: 1.179rem;
-  font-weight: 700;
+  font-size: 0.98rem;
+  font-weight: 400;
+  transition: color 0.3s ease;
   font-family: "Poppins", Helvetica, Arial, sans-serif;
   text-align: center;
   text-decoration: none;
@@ -74,7 +78,7 @@
 }
 
 .dropbtn{
-  background-color: rgba(253, 72, 72, 0.9);
+  background-color: rgba(0, 0, 0, 0.9);
   border-radius: 10px;
   cursor: pointer;
   border-radius: 5px;
