Componente de navbar finalizado, queda agregar algunos Stylos o mejorar los colores, tambien se adelantó casi finalizado el componente de pruebas actuales debajo del navbar llamado ''pruebas recientes''

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #003366;
+    background-color: #27ae60;
     color: #ffffff;
     padding: 20px 0;
     text-align: center;
