--- a/src/styles/navBar.css
+++ b/src/styles/navBar.css
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: linear-gradient(to right, #f2ff00, #077c1a);
+  background: linear-gradient(to right, #f2ff00, #27ae60);
   padding: 0px 50px;
   max-width: 100%;
   height: 11vh; 
@@ -18,7 +18,6 @@
   width: 100%;
   z-index: 1000;
   height: 100%;
-  margin-bottom: 20px;
 }
 
 
@@ -48,16 +47,34 @@
 .navbar-links{
   list-style: none;
   display: flex;
-  gap: 40px;
+  gap: 30px;
 }
 
 .navbar-links li {
   padding: 8px 0px;
 }
 
-.navbar-links li a:hover {
-  color: #000000; 
+.navbar-links li a, .icono_drowdown{
+  transition:color 0.3s ease;
 }
+
+.navbar-links li:hover a,
+.navbar-links li:hover .icono_drowdown {
+  color: #000000;
+}
+
+
+/*ICONOS REACT CENTRADOS */
+
+.icono_drowdown {
+  justify-items: center;
+  top: 6px;
+  position: relative;
+  left: 5px;  /*Espacio entre el texto y el icono */
+  font-size: 20px;
+  color: white; /* Color del icono */
+}
+
 
 /* ESTILOS DEL MENÚ DESPLEGABLE Y DE LAS OPCIONES DEL MENÚ*/ 
 
@@ -84,36 +101,89 @@
   border-radius: 5px;
 }
 
+/* MENUS DESPLEGABLES */
 
+.opcionTransparente{
+  height: 20px;
+  background-color: transparent !important;
+
+}
+
+.fondoOpcionesDesplegables{
+  background-color:#27ae60 ;
+  border-radius: 15px;
+  box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+}
+
+.fondoOpcionesDesplegables::before {
+  content: '';
+  position: absolute;
+  top: 5.5px;
+  left: 20px; /* Ajusta según dónde está el botón padre */
+  border-width: 0px 15px 15px 15px;
+  border-style: solid;
+  border-color: transparent transparent #27ae60 transparent;
+}
+
+.opcionesDesplegadas li a:hover{
+  color: #dc1a1a;
+}
 
 .dropdown-content {
-  display: none;
   position: absolute;
-  background-color: white;
-  min-width: 150px;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
-  top: 100%;
+  top: 70%;
   left: auto;
-  right: 0; /* Asegura que el menú nunca se salga de la pantalla */
-  z-index: 100;
-  overflow: hidden;
-  white-space: nowrap; /* Evita que los textos se dividan en varias líneas */
+  min-width: 17%;
+  z-index: 1000;
+  flex-direction: column;
+  /* Oculto por defecto con animación */
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+  pointer-events: none;
 }
 
+.dropdown-content.visible {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+  display: flex;
+}
 
 .dropdown-content li {
-  padding: 10px;
+  list-style: none;
+  padding: 10px 10px;
+  text-align: left;
   white-space: nowrap;
+  margin: 0;
 }
 
-.dropdown-content a {
-  color: #003366;
+.dropdown-content li a {
+  color: white !important;
+  line-height: 0.1;
+  text-align: left;
+  margin: 0 13px;
+  padding: 13px;
   display: block;
+  font-size: 13px;
+  font-weight: bold;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-decoration: none;
 }
 
+/*.dropdown-content li a:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 5px;
+}*/
+
+.dropdown-content li:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 5px;
+}
 
 .dropdown:hover .dropdown-content {
-  display: block;
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+  display: flex;
 }
