--- a/src/styles/navBar.css
+++ b/src/styles/navBar.css
@@ -167,18 +167,13 @@
   display: block;
   font-size: 13px;
   font-weight: bold;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Poppins", Helvetica, Arial, sans-serif;
   text-decoration: none;
 }
 
-/*.dropdown-content li a:hover {
-  background-color: rgba(255, 255, 255, 0.2);
-  border-radius: 5px;
-}*/
-
 .dropdown-content li:hover {
   background-color: rgba(255, 255, 255, 0.2);
-  border-radius: 5px;
+  border-radius: 15px;
 }
 
 .dropdown:hover .dropdown-content {
