SE ARREGLARON LOS COMPOENENTES HECHOS ANTERIORMENTE PARA QUE SEAN RESPONSIVOS, SE CAMBIÓ LA PALETA DE COLORES

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #27ae60;
+    background: linear-gradient(90deg, #c5ce93 0%, #02400d 100%);
     color: #ffffff;
     padding: 20px 0;
     text-align: center;
