--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,10 +14,22 @@ html, body {
   
 .espacioGrande {
   height: 100vh;
-  background-color: #27ae60;
+  background-color: #505050;
 }
 
 .lineaSeparadora{
   height: 1px;
   background-color: white;
+}
+
+@media (max-width: 768px) {
+  p {
+    font-size: 14px; /* Tamaño de fuente para pantallas más pequeñas */
+  }
+}
+
+@media (max-width: 480px) {
+  p {
+    font-size: 12px; /* Tamaño de fuente para pantallas aún más pequeñas */
+  }
 }
