--- a/src/styles/pruebas_recientes.css
+++ b/src/styles/pruebas_recientes.css
@@ -39,13 +39,13 @@
 }
 
 .card-prueba .titulo {
-  font-size: 0.6rem;
+  font-size: 65%;
   color: #2c3e50;
   margin-bottom: 5px;
 }
 
 .card-prueba .piscina {
-  font-size: 0.58rem;
+  font-size: 65%;
   font-weight: bold;  ;
   color: #4a4a4a;
 }
