Adelanto M ejores momentos notias terminado patrocinadores, falta tabla de resultados de la liga (vista previa) y algunos videos para acabar el home

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -19,6 +19,8 @@
   }
   
   .footer-logo {
+    background-color: wheat;
+    border-radius: 20px;
     max-width: 100px;
     margin-bottom: 15px;
   }
